mobil nav working

--- a/style.css
+++ b/style.css
@@ -653,7 +653,7 @@ textarea {
 }
 
 .main-navigation ul {
-	display: none;
+	/* display: none; */
 	list-style: none;
 	margin: 0;
 	padding-left: 0;
@@ -701,6 +701,7 @@ textarea {
 .menu-toggle,
 .main-navigation.toggled ul {
 	display: block;
+	border: 1px solid green;
 }
 
 @media screen and (min-width: 37.5em) {
@@ -980,7 +981,9 @@ textarea {
 }
 
 /* ------------- my stylings --------------- */
-*{
+*,
+*::before,
+*::after{
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
@@ -1020,11 +1023,13 @@ body{
 	justify-content: space-between;
 	height: 100px;
 	/* border: 1px solid red; */
+
 }
 .site-header .main-nav .site-logo{
 	position: relative;
 	min-height:50px;
 	min-width: 50px;
+	z-index: 40;
 	/*max-height: 100px;
 	ma x-width: 100px; */
 	/* flex-grow:10; */
@@ -1041,41 +1046,127 @@ body{
 	left: 0;
 }
 
+#nav-checkbox{
+	display: none;
+
+}
+.nav-toggle{
+	display: inline-block;
+	position: relative;
+	width: 2.5rem;
+	height: 2rem;
+	cursor: pointer;
+	z-index: 30;
+	overflow: hidden;
+	border: 1px solid green;
+	
+}
+.nav-toggle span.nav-icon{
+	display: block;
+	position: absolute;
+	top: .5rem;
+	left: .5rem;
+	right: .5rem;
+	height: 2px;
+	background-color:rgb(126, 53, 65) ;
+	transition: 
+	transform .2s ease-in,
+	top .2s ease .2s,
+	left .2s ease-out .4s;
+}
+.nav-toggle span:nth-of-type(2) {
+    top: calc(1rem - 1px);
+}
+.nav-toggle span:nth-of-type(3) {
+    top: calc(1.5rem - 2px);
+}
+#nav-checkbox:checked ~ .nav-toggle span:nth-of-type(2) {
+    left: 100%;
+}
+
+#nav-checkbox:checked ~ .nav-toggle span:nth-of-type(1),
+#nav-checkbox:checked ~ .nav-toggle span:nth-of-type(3) {
+    top: calc(50% - 1px);
+}
+
+#nav-checkbox:checked ~ .nav-toggle span:nth-of-type(1) {
+    transform: rotate(45deg);
+}
+
+#nav-checkbox:checked ~ .nav-toggle span:nth-of-type(3) {
+    transform: rotate(-45deg);
+}
  span.nav-icon{
-	 display: none;
+	 /* display: none; */
     background:rgb(126, 53, 65) ;
-    /* display: block; */
+    display: block;
     height:3px ;
     width: 26px;
     position: relative;
     animation: background .2s  ease-out;
 }
+/* Nav Menu */
+.nav-menu {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
 
- span.nav-icon:before{
-    background-color:rgb(126, 53, 65) ;
-    content: "";
-    display: block;
-    height: 100%;
-    width: 100%;
-    position: absolute;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    background: pink;
+    z-index: 20;
+    
+    opacity: 0;
+    pointer-events: none;    
+}
+/* Nav Menu Active */
+#nav-checkbox:checked ~ .nav-menu {
+    opacity: 1;
+    pointer-events: initial;
+    transition: opacity .3s;
+}
+
+/* Nav Menu List */
+.nav-menu ul {    
+    position: relative;
+    list-style: none;    
+    text-align: center;    
+}
+
+.nav-menu li {
+    position: relative;
+    margin-bottom: 1rem;
+    opacity: 0;
+    top: 2rem;    
+}
+
+#nav-checkbox:checked ~ .nav-menu li {
+    opacity: 1;
+    top: 0;
     transition: all .2s ease-out;
-    top: 10px;
 }
- span.nav-icon:after{
-    background-color:rgb(126, 53, 65) ;
-    content: "";
-    display: block;
-    height: 100%;
-    width: 100%;
-    position: absolute;
-    transition: all .2s ease-out;
-    top: -10px;
+
+#nav-checkbox:checked ~ .nav-menu li:nth-of-type(1) {transition-delay: .3s;}
+#nav-checkbox:checked ~ .nav-menu li:nth-of-type(2) {transition-delay: .5s;}
+#nav-checkbox:checked ~ .nav-menu li:nth-of-type(3) {transition-delay: .7s;}
+#nav-checkbox:checked ~ .nav-menu li:nth-of-type(4) {transition-delay: .9s;}
+
+.nav-menu li:last-of-type {
+    margin-bottom: 0;
 }
-button.menu-toggle{
-    height: 30px;
-    padding:0 ;
-    cursor: pointer;
+
+.nav-menu a {
+    display: inline-block;
+    padding: 1rem;
+    color: #fff;
+    font-size: 1.5rem;
 }
+
 .site-description,
 .site-title {
     display: none;
